7. DE Job vacancies full ETL pipeline with Airflow (Rapid APi) -- repeat the task from the shared Github link/Airflow_Installation/logs/dag_id=my_postgres_dag_v3/run_id=scheduled__2023-07-28T000000+0000/task_id=insert_data/attempt=1.log
[2023-07-29T12:48:04.162+0000] {taskinstance.py:1087} INFO - Dependencies all met for <TaskInstance: my_postgres_dag_v3.insert_data scheduled__2023-07-28T00:00:00+00:00 [queued]>
[2023-07-29T12:48:04.481+0000] {taskinstance.py:1087} INFO - Dependencies all met for <TaskInstance: my_postgres_dag_v3.insert_data scheduled__2023-07-28T00:00:00+00:00 [queued]>
[2023-07-29T12:48:04.499+0000] {taskinstance.py:1283} INFO - 
--------------------------------------------------------------------------------
[2023-07-29T12:48:04.518+0000] {taskinstance.py:1284} INFO - Starting attempt 1 of 3
[2023-07-29T12:48:04.533+0000] {taskinstance.py:1285} INFO - 
--------------------------------------------------------------------------------
[2023-07-29T12:48:05.099+0000] {taskinstance.py:1304} INFO - Executing <Task(PostgresOperator): insert_data> on 2023-07-28 00:00:00+00:00
[2023-07-29T12:48:05.163+0000] {standard_task_runner.py:55} INFO - Started process 5771 to run task
[2023-07-29T12:48:05.196+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'my_postgres_dag_v3', 'insert_data', 'scheduled__2023-07-28T00:00:00+00:00', '--job-id', '2045', '--raw', '--subdir', 'DAGS_FOLDER/postgres_operator_v2.py', '--cfg-path', '/tmp/tmp5g8ni11z']
[2023-07-29T12:48:05.271+0000] {standard_task_runner.py:83} INFO - Job 2045: Subtask insert_data
[2023-07-29T12:48:06.799+0000] {task_command.py:389} INFO - Running <TaskInstance: my_postgres_dag_v3.insert_data scheduled__2023-07-28T00:00:00+00:00 [running]> on host f1ea17bde741
[2023-07-29T12:48:08.295+0000] {taskinstance.py:1513} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=Byron
AIRFLOW_CTX_DAG_ID=my_postgres_dag_v3
AIRFLOW_CTX_TASK_ID=insert_data
AIRFLOW_CTX_EXECUTION_DATE=2023-07-28T00:00:00+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=scheduled__2023-07-28T00:00:00+00:00
[2023-07-29T12:48:08.314+0000] {sql.py:253} INFO - Executing: 
        INSERT INTO ***_users (name) VALUES ('Chidi', 'Joseph','Cindy', 'Sarai')
        
    
[2023-07-29T12:48:08.550+0000] {base.py:73} INFO - Using connection ID 'my_connection' for task execution.
[2023-07-29T12:48:16.588+0000] {base.py:73} INFO - Using connection ID 'my_connection' for task execution.
[2023-07-29T12:48:16.736+0000] {sql.py:364} INFO - Running statement: 
        INSERT INTO ***_users (name) VALUES ('Chidi', 'Joseph','Cindy', 'Sarai')
        
    , parameters: None
[2023-07-29T12:48:16.817+0000] {taskinstance.py:1772} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/operators/sql.py", line 261, in execute
    return_last=self.return_last,
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 338, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 369, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: INSERT has more expressions than target columns
LINE 2: ...INSERT INTO ***_users (name) VALUES ('Chidi', 'Joseph','...
                                                             ^

[2023-07-29T12:48:16.917+0000] {taskinstance.py:1327} INFO - Marking task as UP_FOR_RETRY. dag_id=my_postgres_dag_v3, task_id=insert_data, execution_date=20230728T000000, start_date=20230729T124804, end_date=20230729T124816
[2023-07-29T12:48:17.482+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 2045 for task insert_data (INSERT has more expressions than target columns
LINE 2: ...INSERT INTO ***_users (name) VALUES ('Chidi', 'Joseph','...
                                                             ^
; 5771)
[2023-07-29T12:48:17.737+0000] {local_task_job.py:159} INFO - Task exited with return code 1
[2023-07-29T12:48:18.148+0000] {taskinstance.py:2582} INFO - 0 downstream tasks scheduled from follow-on schedule check
